src/app/app.css
/*
* Colors
*/
.NLT__color--light-gray {
	/* background-color: #cfcfc4; */
	background-color: hsl(0, 3%, 94%);
}

.NLT__color--gray {
	/* background-color: #cfcfc4; */
	background-color: hsl(40, 5%, 88%);
}

.NLT__color--brown {
	background-color: hsl(18, 31%, 89%);
}

.NLT__color--orange {
	/* background-color: #ffdfd3; */
	background-color: hsl(28, 67%, 88%);
}

.NLT__color--yellow {
	/* background-color: #faffc7; */
	background-color: hsl(43, 82%, 89%);
}

.NLT__color--green {
	background-color: hsl(113, 30%, 89%);
}

.NLT__color--blue {
	background-color: hsl(205, 41%, 89%);
}

.NLT__color--purple {
	/* background-color: #e0bbe4; */
	background-color: hsl(272, 29%, 90%);
}

.NLT__color--pink {
	/* background-color: #fec8d8; */
	background-color: hsl(330, 36%, 91%);
}

.NLT__color--red {
	background-color: hsl(11, 64%, 91%);
	/* background-color: #ff6961; */
}

/*
* Error
*/
.NLT__error {
	color: red;
}

.NLT__app {
	overflow: auto;
}

/*
* Icon
*/
.NLT__icon--selectable:hover {
	border-radius: 4px;
	box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.2);
}

.NLT__icon--md {
	width: 1rem !important;
	height: 1rem !important;
}
/*
* Selectable and selected
*/
.NLT__selectable {
	cursor: pointer;
}

.NLT__selectable:hover {
	background-color: var(--interactive-hover)
}

.NLT__selected {
	background-color: var(--interactive-normal);
}

/*
* Margin
*/
.NLT__margin-right {
	margin-right: 4px;
}

.NLT__margin-left {
	margin-left: 4px;
}

/*
* Input
*/
.NLT__input {
	height: 100%;
	width: 100%;
	padding: 4px 10px !important;
}

.NLT__input--no-border {
	border: 0 !important;
}

.NLT__input--number {
	text-align: right;
}

